# ChangeLog for dev-ruby/zentest
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.39 2008/10/26 07:59:57 graaff Exp $

*zentest-3.11.0 (26 Oct 2008)

  26 Oct 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.11.0.ebuild:
  Version bump with many small bug fixes and enhancements.

*zentest-3.10.0 (18 Jun 2008)

  18 Jun 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.10.0.ebuild:
  Version bump: improved multiruby support, minor bugfixes.

*zentest-3.9.3 (12 Jun 2008)

  12 Jun 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.9.3.ebuild:
  Version bump

  25 Apr 2008; Hans de Graaff <graaff@gentoo.org> zentest-3.9.2.ebuild:
  Zentest needs hoe 1.5.1

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> zentest-3.9.1.ebuild:
  ia64 stable wrt #217389

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> zentest-3.9.1.ebuild:
  Stable on ppc64; bug #217389

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> zentest-3.9.1.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> zentest-3.9.1.ebuild:
  Stable on ppc wrt bug 217389

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org> zentest-3.9.1.ebuild:
  Mark stable on amd64, bug #217389

*zentest-3.9.2 (21 Mar 2008)

  21 Mar 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.9.2.ebuild:
  Version bump with 4 minor enhancements and 5 bug fixes.

  21 Mar 2008; Hans de Graaff <graaff@gentoo.org> -zentest-3.7.0.ebuild,
  -zentest-3.7.1.ebuild, -zentest-3.7.2.ebuild:
  Remove some intermediate versions that will not become stable anymore

  05 Feb 2008; Hans de Graaff <graaff@gentoo.org> zentest-3.9.1.ebuild:
  Fix description

*zentest-3.9.1 (01 Feb 2008)

  01 Feb 2008; Joshua Nichols <nichoj@gentoo.org> +zentest-3.9.1.ebuild:
  Version bump.

*zentest-3.8.0 (09 Jan 2008)

  09 Jan 2008; <nichoj@gentoo.org> +zentest-3.8.0.ebuild:
  Version bump.

  08 Jan 2008; <nichoj@gentoo.org> zentest-3.6.1.ebuild,