@@ -5,24 +5,18 @@ AUX zentest-dirfix.diff 532 RMD160 32d1cd84115a89ffc938bc9c2311afa16fae98ee SHA1
 AUX zentest-fixrubyloc.diff 257 RMD160 a2f9a5ab63e139e5fb6dda07a81817bdc31da59c SHA1 2d83280226d1ab88d3115ce69a635aa5649e694f SHA256 00a88163ea8f9543f28a762c1ca0d118a4c056d2b14a5b966cd38130f0455be8
 DIST ZenTest-3.10.0.gem 82432 RMD160 6bfa0b77995cea01ac587e299b2132b91e0c1fa0 SHA1 98b011a014a7820b61c56fbd5bfa170aaad7d57b SHA256 6ec8015053093ed90019382e08ebb91e0993fa99e55abd66d4ec0eb9a05a762e
 DIST ZenTest-3.11.0.gem 84480 RMD160 1f232061ebd25b7631b0eaabd4d86af69bfc12fe SHA1 a3a61957d354f171f169a8ac6bd6c07ecda83749 SHA256 e703711069ce6d2bf2fa2767f6e8b64c0b7d83c3abc824c74717359ec51dc8e1
-DIST ZenTest-3.6.1.gem 62464 RMD160 8056ac170ef2db442c0c8a860697dbdc8ba98b19 SHA1 138d4a7b94b95e504b59a2b3ac602563cbd604d1 SHA256 7c217220a6832f30de63723f86a7f990622006de53443224a8943747183a53ee
-DIST ZenTest-3.8.0.gem 74752 RMD160 ff39e6c076e98a945de4844dee3650574760d269 SHA1 8ff26be823e6efaed11823b409371887d970814e SHA256 746bbc370c5465fca0bff58b6bb80be143e19b758a1b70e0df6b9a2f0300fb85
 DIST ZenTest-3.9.1.gem 77312 RMD160 f2d898d0b4ce07ac0cade6656c57cc9d39cf7597 SHA1 44c1fca56ba35be68a5346f62f7048a18a480813 SHA256 5827c230cddd5b21d6901027773ccc2da7ff0801d3302269f771ad631ab1b1fd
-DIST ZenTest-3.9.2.gem 78848 RMD160 20490208282ca855c9f05c6d5db422d5b3bf3051 SHA1 0ff7d8651411befda655fc2ce54032a5bb4adfde SHA256 c9bb8814e12849703f6956c6a98d8777dedfa144ae87a2657c2d8803bc7434e2
 DIST ZenTest-3.9.3.gem 80384 RMD160 c8f06f6765630f784998308b5d8d54b44ed43931 SHA1 49f2651bb10e37019667a2aa5ba39fb6a2383217 SHA256 da26598a329a2041a3dc6a29cae4e2d5b94ca199b3065c44c522f698facd13c1
 EBUILD zentest-3.10.0.ebuild 606 RMD160 1b96342f199da4e2bf600a1ec02fc54274fe945c SHA1 480f31aef3d35378cf4e7f3d4a4f8ae57e2e6fb1 SHA256 8f49750db0dc140b7fcbdfb6ce9361e75871f7af607a0a48024ccac6432d60f6
 EBUILD zentest-3.11.0.ebuild 606 RMD160 ab26dcba1a1e563731d17941a4604e917afe7bbd SHA1 1ea657003fb579bacfe8d7336a2f3a6400624071 SHA256 0d1c93a7cb6c2a57f01b58f7c21807ccce18a1211a6fd443b2aad28f3c141b0b
-EBUILD zentest-3.6.1.ebuild 687 RMD160 fadcd55c3383581eec75f3c20922611f7e84a618 SHA1 51f4fd7ef1a43554472bee9c065fea66c813da2b SHA256 34228470521b7025b025dddba0abc02a497d32a09f0d7232d1725749be782cfc
-EBUILD zentest-3.8.0.ebuild 550 RMD160 89438bdacefa493bd2d29d31ad31cb2289d427e1 SHA1 60daa99313791dfaff432967b26aa1e159a35285 SHA256 f017e37ed03eeae66aa531dfc16e6fd6d2edbe487f2a762a5aa4c3d46faea3ea
 EBUILD zentest-3.9.1.ebuild 608 RMD160 8c54c433d442b998f0f246d29a8afa10cc52f586 SHA1 972b4f1df632c8f25f3aa655cc4020c574765b00 SHA256 f58a99936cc7d8aaf38b7b494571b5e47ac668bfaf40b55fce78cf8a4f867b95
-EBUILD zentest-3.9.2.ebuild 605 RMD160 2abc6e59d7259ebe50da87e5ee59e1c0606084f6 SHA1 fb4efb0fc84ac06d0542a5565d4f8c8ccc5c6749 SHA256 6ce67ac6767cadf036d4dbb28d8adb50e863af7407e81b9030a1a110c1ad1396
 EBUILD zentest-3.9.3.ebuild 605 RMD160 d7bb5d5af89f192eb2af84b506e131f6661999bc SHA1 9423f32b55cffac5f71e3252265743d46ea67414 SHA256 3f0cdaa848e07f6cfe90f4bfc2a9ec7ad31302b4b47be5e733215e4fbdad7156
-MISC ChangeLog 5631 RMD160 65aef312b2df5003940868547a900645cc23e68c SHA1 fead3b77399cb5e4c9ac8ea506ac2b3d2650a23e SHA256 fe7d71907184c7a41c6a7899ba509b201b2cfa9632be9a64d0c5a346675d9633
+MISC ChangeLog 5775 RMD160 9ee43dc1889fdc0b12e9d6f2c2be42f1e36854ad SHA1 c37ee7dda317758aeafb054dfeef11daa29e07a1 SHA256 88db62bec548e0eb8b4c3ea9429e198e2d1f31fa585a036f5b677a83365ef378
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkEI4sACgkQCzgcb6sPj4+bowCgkICAjHeb8h/2YgrCCVcZ6i8a
-Oe0An3SJ2wdqZzNN3UQpsvcbU/0adnKQ
-=pTYL
+iEYEARECAAYFAkkEI+EACgkQCzgcb6sPj4/aKACfdpKplqr5FjM41o/NG390LzC5
+EVoAnRqXG5Woi7+h8Tm/46PhWZKrXVva
+=wxhx
 -----END PGP SIGNATURE-----
