@@ -1,20 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.9.2.ebuild,v 1.2 2008/04/25 11:03:00 graaff Exp $
-
-inherit gems
-
-MY_P=${P/zentest/ZenTest}
-S=${WORKDIR}/${MY_P}
-
-DESCRIPTION="ZenTest provides tools to support testing: zentest, unit_diff, autotest, multiruby, and Test::Rails"
-HOMEPAGE="http://rubyforge.org/projects/zentest/"
-LICENSE="Ruby"
-
-SRC_URI="http://gems.rubyforge.org/gems/${MY_P}.gem"
-
-KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~x86"
-SLOT="0"
-IUSE=""
-
-DEPEND=">=dev-ruby/hoe-1.5.1"
